# lintcheck

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ci.sh  config-extensions.cfg  lintcheck.py  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: autodeps.yml
src/lintcheck/: __init__.py  checker.py  extension.py  utils.py
src/lintcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_utils.py
